feat(doc): add payment route to swagger
