# docs/swagger.json
@@ -2254,6 +2254,69 @@
                     }
                 }
             }
+        },
+        "/payment/create-intent": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Gera um 'client_secret' do Stripe para o paciente logado poder realizar um pagamento (ex: adicionar fundos à carteira). Requer autenticação de Paciente.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Payment"
+                ],
+                "summary": "Cria uma Intenção de Pagamento (Stripe)",
+                "parameters": [
+                    {
+                        "description": "Valor do pagamento a ser criado",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.PaymentIntentRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Intenção de pagamento criada com sucesso",
+                        "schema": {
+                            "$ref": "#/definitions/utils.SuccessPaymentIntentResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Requisição inválida",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Não autorizado (Token JWT inválido ou ausente)",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Proibido (Usuário não é Paciente)",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Não foi possível criar a intenção de pagamento",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -3333,6 +3396,22 @@
                 }
             }
         },
+        "model.PaymentIntentRequest": {
+            "type": "object",
+            "properties": {
+                "value": {
+                    "type": "number"
+                }
+            }
+        },
+        "model.PaymentIntentResponse": {
+            "type": "object",
+            "properties": {
+                "client_secret": {
+                    "type": "string"
+                }
+            }
+        },
         "model.User": {
             "type": "object",
             "required": [
@@ -3660,6 +3739,22 @@
                 "message": {
                     "type": "string",
                     "example": "Perfil do paciente listado com sucesso."
+                },
+                "success": {
+                    "type": "boolean",
+                    "example": true
+                }
+            }
+        },
+        "utils.SuccessPaymentIntentResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/model.PaymentIntentResponse"
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Intenção de pagamento criada com sucesso."
                 },
                 "success": {
                     "type": "boolean",
